--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.6.0
 anyio==3.7.1
 boto3==1.28.83
 click==8.1.7
+databases==0.8.0
+databases[asyncpg]
 fastapi==0.104.0
 h11==0.14.0
 idna==3.4
@@ -9,6 +11,8 @@ protobuf==4.24.4
 pydantic==2.4.2
 pydantic_core==2.10.1
 python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+SQLAlchemy==1.4.50
 sniffio==1.3.0
 starlette==0.27.0
 temporalio==1.3.0
